Adds topscret_split support and  redis connection
