# model/http.go
@@ -11,15 +11,29 @@ type TopSecretResponse struct {
 }
 
 type SatelliteInfoRequest struct {
-	Name     string   `json:"name" example:"kenobi"`
-	Distance float32  `json:"distance" example:"100.23"`
-	Message  []string `json:"message" example:",is,a,,message"`
+	Name     string   `json:"name" example:"kenobi" redis:"name"`
+	Distance float32  `json:"distance" example:"100.23" redis:"distance"`
+	Message  []string `json:"message" example:",is,a,,message" redis:"message"`
+}
+
+type Dataset struct {
+	Satellites []SatelliteInfoRequest
+	Key        string
+	Operation  string
 }
 
 type TopSecretRequest struct {
 	Satellites []SatelliteInfoRequest `json:"satellites"`
 }
 
+type TopSecretSplitRequest struct {
+	*SatelliteInfoRequest
+}
+
+type TopSecretSplitPOSTResponse struct {
+	Operation string `json:"operation"`
+}
+
 type ErrorResponse struct {
-	Error string `json:"error" example:"this is an error message description"`
+	Message string `json:"error" example:"this is an error message description"`
 }
